--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "oils-plugin-syspars",
-  "version": "2.4.1",
+  "version": "3.1.2",
   "description": "Persistent system parameters (key-value pair) plugin for oils js.",
   "keywords": [
   	"oils",
-    "passport",
-    "authentication",
-    "authorization"
+    "syspar"
   ],
   "author": {
     "name": "Manny Vergel",
